ai/nvidia/gen-output/node-feature-discovery-gc.gpu-operator.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: myrelease
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: node-feature-discovery
    app.kubernetes.io/version: v0.16.6
    helm.sh/chart: node-feature-discovery-0.16.6
    role: gc
  name: node-feature-discovery-gc
  namespace: gpu-operator
spec:
  replicas: 1
  revisionHistoryLimit: null
  selector:
    matchLabels:
      app.kubernetes.io/instance: myrelease
      app.kubernetes.io/name: node-feature-discovery
      role: gc
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: myrelease
        app.kubernetes.io/name: node-feature-discovery
        role: gc
    spec:
      containers:
      - args:
        - -gc-interval=1h
        command:
        - nfd-gc
        image: registry.k8s.io/nfd/node-feature-discovery:v0.16.6
        imagePullPolicy: IfNotPresent
        name: gc
        ports:
        - containerPort: 8081
          name: metrics
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: false
      priorityClassName: system-node-critical
      securityContext: {}
      serviceAccountName: node-feature-discovery
